[package]
name = "mase"
description = "miniquad android storage example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = { path = "../miniquad-android", version = "0.3.0-alpha.37" }

[target.'cfg(target_os = "android")'.dependencies]
sapp-android = { path = "../miniquad-android/native/sapp-android", version = "0.1.8" }